ID-3571 [FIX] Changed grid gap from pixel to %

--- a/css/form.css
+++ b/css/form.css
@@ -30,7 +30,7 @@
 }
 
 .w-1_4.own {
-  width: 25%;
+  width: 24%;
   grid-column-end: span 4;
 }
 
@@ -39,7 +39,7 @@
 }
 
 .w-1_2.own {
-  width: 50%;
+  width: 49.3333%;
   grid-column-end: span 4;
 }
 
@@ -48,7 +48,7 @@
 }
 
 .w-3_4.own {
-  width: calc(75% - 2px);
+  width: 74.666%;
   grid-column-end: span 4;
 }
 
@@ -59,8 +59,7 @@
 .fl-form .form-html {
   display: grid;
   grid-template-columns: repeat(4, 24%);
-  grid-gap: 10px;
-  padding: 10px;
+  grid-gap: 1.33333%;
 }
 
 .fl-form.placeholder .form-html {
@@ -1553,26 +1552,6 @@ form hr {
   .form-group.w-1_4 .fl-time-picker > .fa,
   .form-group.w-1_4 .fl-date-picker > .fa {
     width: 34px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .fl-form .form-html {
-    grid-template-columns: repeat(4, 23%);
-  }
-
-  .w-1_4.own {
-    width: calc(25% - 8px);
-  }
-
-  .w-1_2.own {
-    width: calc(50% - 5px);
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  .fl-form .form-html {
-    grid-template-columns: repeat(4, 24.5%);
   }
 }
 
